--- a/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/campaigns/adds_a_campaign.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/campaigns/adds_a_campaign.yml
@@ -13,13 +13,13 @@ http_interactions:
             <cake:Campaign>
               <cake:api_key>cake-api-key</cake:api_key>
               <cake:display_link_type_id>1</cake:display_link_type_id>
-              <cake:expiration_date>2045-02-09T01:00:00</cake:expiration_date>
               <cake:affiliate_id>1</cake:affiliate_id>
               <cake:offer_id>8910</cake:offer_id>
               <cake:media_type_id>1</cake:media_type_id>
               <cake:account_status_id>1</cake:account_status_id>
               <cake:payout>1.23</cake:payout>
               <cake:campaign_id>0</cake:campaign_id>
+              <cake:expiration_date>2045-02-09T01:00:00</cake:expiration_date>
             </cake:Campaign>
           </env:Body>
         </env:Envelope>
@@ -36,21 +36,21 @@ http_interactions:
       Content-Type:
       - application/soap+xml; charset=utf-8
       Server:
-      - Microsoft-IIS/8.0
+      - Microsoft-IIS/8.5
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 15 Jun 2015 12:26:41 GMT
+      - Wed, 04 May 2016 09:44:12 GMT
       Content-Length:
-      - '628'
+      - '629'
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><CampaignResponse
         xmlns="http://cakemarketing.com/api/3/"><CampaignResult><success>true</success><message>Campaign
-        Created</message><success_info><campaign_id>18243</campaign_id><affiliate_id>1</affiliate_id><offer_id>8910</offer_id><offer_contract_id>1455</offer_contract_id><media_type_id>1</media_type_id><original>true</original></success_info></CampaignResult></CampaignResponse></soap:Body></soap:Envelope>
+        Created</message><success_info><campaign_id>22081</campaign_id><affiliate_id>1</affiliate_id><offer_id>8910</offer_id><offer_contract_id>1455</offer_contract_id><media_type_id>1</media_type_id><original>false</original></success_info></CampaignResult></CampaignResponse></soap:Body></soap:Envelope>
     http_version: 
   recorded_at: Tue, 17 Feb 2015 12:00:00 GMT
-recorded_with: VCR 2.9.3
+recorded_with: VCR 3.0.1
