--- a/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/campaigns/edits_a_campaign.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/campaigns/edits_a_campaign.yml
@@ -13,12 +13,24 @@ http_interactions:
             <cake:Campaign>
               <cake:api_key>cake-api-key</cake:api_key>
               <cake:display_link_type_id>1</cake:display_link_type_id>
-              <cake:expiration_date>2045-02-09T01:00:00</cake:expiration_date>
+              <cake:account_status_id>1</cake:account_status_id>
+              <cake:auto_disposition_delay_hours>0</cake:auto_disposition_delay_hours>
+              <cake:clear_session_on_conversion>no_change</cake:clear_session_on_conversion>
+              <cake:currency_id>0</cake:currency_id>
+              <cake:expiration_date_modification_type>do_not_change</cake:expiration_date_modification_type>
+              <cake:media_type_id>1</cake:media_type_id>
+              <cake:paid>no_change</cake:paid>
+              <cake:paid_redirects>no_change</cake:paid_redirects>
+              <cake:paid_upsells>no_change</cake:paid_upsells>
+              <cake:postback_delay_ms>-1</cake:postback_delay_ms>
+              <cake:redirect_404>no_change</cake:redirect_404>
+              <cake:redirect_offer_contract_id>0</cake:redirect_offer_contract_id>
+              <cake:review>no_change</cake:review>
+              <cake:use_offer_contract_payout>no_change</cake:use_offer_contract_payout>
+              <cake:payout_update_option>do_not_change</cake:payout_update_option>
               <cake:campaign_id>123</cake:campaign_id>
               <cake:affiliate_id>1</cake:affiliate_id>
               <cake:offer_id>8910</cake:offer_id>
-              <cake:media_type_id>1</cake:media_type_id>
-              <cake:account_status_id>1</cake:account_status_id>
               <cake:payout>1.23</cake:payout>
             </cake:Campaign>
           </env:Body>
@@ -36,13 +48,13 @@ http_interactions:
       Content-Type:
       - application/soap+xml; charset=utf-8
       Server:
-      - Microsoft-IIS/8.0
+      - Microsoft-IIS/8.5
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 15 Jun 2015 12:27:13 GMT
+      - Wed, 04 May 2016 09:44:11 GMT
       Content-Length:
       - '626'
     body:
@@ -53,4 +65,4 @@ http_interactions:
         Updated</message><success_info><campaign_id>123</campaign_id><affiliate_id>-1</affiliate_id><offer_id>5078</offer_id><offer_contract_id>123</offer_contract_id><media_type_id>1</media_type_id><original>true</original></success_info></CampaignResult></CampaignResponse></soap:Body></soap:Envelope>
     http_version: 
   recorded_at: Tue, 17 Feb 2015 12:00:00 GMT
-recorded_with: VCR 2.9.3
+recorded_with: VCR 3.0.1
